gobmkida/c3/trymove
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/trymove/src/engine/board.c:985:7: error: use of undeclared identifier 'off_4AC590'
v14 = off_4AC590[komaster]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/trymove/src/engine/board.c:1014:7: error: use of undeclared identifier 'off_4AC590'
v18 = off_4AC590[komaster]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/trymove/src/obj/1/board.o] Error 1
